kubernetes-manifests/gardener/yaml-minikube/account.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - name: server
          image: ericwudocker01/demojam2019_account
          ports:
          - name: http
            containerPort: 50050
          readinessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50050"]
          livenessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:50050"]
---
apiVersion: v1
kind: Service
metadata:
  name: account
spec:
  type: ClusterIP
  selector:
    app: account
  ports:
  - name: http
    port: 50050
    targetPort: 50050
---
