kubernetes-manifests/gardener/yaml-minikube/db-server.yaml
# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db-server
  template:
    metadata:
      labels:
        app: db-server
    spec:
      containers:
        - name: server
          image: ericwudocker01/demojam2019_dbservice
          ports:
          - name: http
            containerPort: 8001
          readinessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8001"]
          livenessProbe:
            initialDelaySeconds: 10
            exec:
              command: ["/bin/grpc_health_probe", "-addr=:8001"]
---
apiVersion: v1
kind: Service
metadata:
  name: db-server
spec:
  type: ClusterIP
  selector:
    app: db-server
  ports:
  - name: http
    port: 8001
    targetPort: 8001
---
